--- a/RPI.WIoT10.MeArm.Components/RPI.WIoT10.MeArm.Components.csproj
+++ b/RPI.WIoT10.MeArm.Components/RPI.WIoT10.MeArm.Components.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GripperComponent.cs" />
+    <Compile Include="LeverComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TurnTableComponent.cs" />
     <EmbeddedResource Include="Properties\RPI.WIoT10.MeArm.Components.rd.xml" />
