--- a/RPI.WIoT10.MeArm.Components/RPI.WIoT10.MeArm.Components.csproj
+++ b/RPI.WIoT10.MeArm.Components/RPI.WIoT10.MeArm.Components.csproj
@@ -114,9 +114,9 @@
     <EmbeddedResource Include="Properties\RPI.WIoT10.MeArm.Components.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\UWP.Devices\Devices.Controllable\Devices.Controllable.csproj">
-      <Project>{8AD633BD-0B47-47B9-8FF3-B92C08B6EB07}</Project>
-      <Name>Devices.Controllable</Name>
+    <ProjectReference Include="..\..\UWP.Devices\Devices.Components.Base\Devices.Components.Base.csproj">
+      <Project>{39ABE250-6554-4086-98D9-0D36903DE939}</Project>
+      <Name>Devices.Components.Base</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\UWP.Devices\Devices.Hardware\Devices.Hardware.csproj">
       <Project>{9e055181-2cc7-4d82-8081-65eb99b6eee9}</Project>
