Controller UI added

--- a/RPI.WIoT10.MeArm.Control/RPI.WIoT10.MeArm.Control.csproj
+++ b/RPI.WIoT10.MeArm.Control/RPI.WIoT10.MeArm.Control.csproj
@@ -99,7 +99,10 @@
     <Compile Include="AppShell.xaml.cs">
       <DependentUpon>AppShell.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controller\DeviceConnectionController.cs" />
+    <Compile Include="Controllers\DeviceConnectionHandler.cs" />
+    <Compile Include="Controls\HorizontalSlider.xaml.cs">
+      <DependentUpon>HorizontalSlider.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Joypad.xaml.cs">
       <DependentUpon>Joypad.xaml</DependentUpon>
     </Compile>
@@ -108,11 +111,15 @@
     <Compile Include="Controls\PageHeader.xaml.cs">
       <DependentUpon>PageHeader.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\VerticalSlider.xaml.cs">
+      <DependentUpon>VerticalSlider.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Enums.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\PageNavigation.cs" />
     <Compile Include="Views\AppSettingsPage.xaml.cs">
       <DependentUpon>AppSettingsPage.xaml</DependentUpon>
     </Compile>
@@ -154,6 +161,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Controls\HorizontalSlider.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Joypad.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -161,6 +172,10 @@
     <Page Include="Controls\PageHeader.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\VerticalSlider.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
